--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_main"
+        android:icon="@mipmap/ic_launcher_main_new"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_main_round"
+        android:roundIcon="@mipmap/ic_launcher_main_new_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity_Memo">
